--- a/src/main/webapp/annotation.html
+++ b/src/main/webapp/annotation.html
@@ -440,13 +440,8 @@
  <!------------------------------------  Editor ------------------------------------------------------->
     <h2 align="center">Comparison of Different Formats </h2>
     <h3>Please input orginal text document ...</h3>
-    <div id="editor">JABBERWOCKY
-By Lewis Carroll
+    <div id="editor">Please input your text here.
 
-'Twas brillig, and the slithy toves
-Did gyre and gimble in the wabe;
-All mimsy were the borogoves,
-And the mome raths outgrabe.
     </div>
     <textarea id="input1" style="width:66%; height:100px; display:none"></textarea>
 
@@ -470,7 +465,7 @@ And the mome raths outgrabe.
     </li>
 </ol>
 </div>
-    
+
 <h3>Please view annotation format (XML/JSON) ...</h3>
 <div id="display">
 </div>
