--- a/src/main/webapp/annotation.html
+++ b/src/main/webapp/annotation.html
@@ -295,8 +295,8 @@
 
      var wsdlMap = {
           gateannie: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/GateAnnie?wsdl',
-          gateopennlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/UimaOpenNLP?wsdl',
-          uimaopennlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/UimaDkproOpenNLP?wsdl',
+          gateopennlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/GateOpenNLP?wsdl',
+          uimaopennlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/UimaOpenNLP?wsdl',
           uimadkprostanford: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/UimaDkproStanford?wsdl',
           uimadkproopennlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/UimaDkproOpenNLP?wsdl',
           stanfordcorenlp: 'http://eldrad.cs-i.brandeis.edu:8282/concept-mapping/0.0.1/services/StanfordCoreNLP?wsdl',
