--- a/src/main/webapp/json.html
+++ b/src/main/webapp/json.html
@@ -150,7 +150,7 @@ function transform() {
     $.ajax({
         type: "POST",
         dataType: "text",
-        url: "json2json.groovy",
+        url: "json.groovy",
         data: req,
         success: function(data, dataType) {
           var resJson = jQuery.parseJSON(data);
