--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,22 @@ Hello World!
 
 <hr />
 <h2> Tools </h2>
+
+<p>
+    <a href="json2json.html">JSON to JSON Transformation</a>
+</p>
+<p>
+    <a href="annotation.html">Annotations</a>
+</p>
+<p>
+    <a href="json.html">JSON(-LD) Validator</a>
+</p>
+<p>
+    <a href="visualization.html">visualization.html</a>
+</p>
+
+
+<!--
 <p>
     <a href="display.groovy">Class Displayer</a>
 </p>
@@ -51,6 +67,6 @@ Hello World!
     <li><a href="display.groovy?clazzname=edu.brandeis.cs.lappsgrid.stanford.corenlp.Tokenizer" target="_blank">edu.brandeis.cs.lappsgrid.stanford.corenlp.Tokenizer</a></li>
 
 </ul>
-
+-->
 </body>
 </html>
