--- a/src/main/webapp/lapps.html
+++ b/src/main/webapp/lapps.html
@@ -672,7 +672,7 @@
     </tbody>
 </table>
 
-<div class="container" id="resultpanel" style="display:none">
+<div class="container" id="resultpanel">
     <table align="center">
         <tr><th width="100px"> </th> <th>Tool Output</th><th width="20px"> </th> <th> Save Output </th> </tr>
         <tr><td width="100px"></td>
@@ -692,6 +692,7 @@
 
 
 <!-- =============================================================================================================== -->
+<div style="display:none">
 <h2 align="center"><span class="label label-primary" style="width:800px;display:inline-block;">LappsGrid JSON 2 Brat JSON</span></h2>
 <p>
 <table align="center">
@@ -796,7 +797,9 @@
 </table>
 
 <hr/>
+</div>
 <!-- =============================================================================================================== -->
+<div style="display:none">
 <h2 align="center"><span class="label label-primary" style="width:800px;display:inline-block;">Brat JSON Visualization</span></h2>
 
 <table align="center">
@@ -1360,7 +1363,7 @@
 
 <p></p>
 <p></p>
-
+</div>
 <!-- =============================================================================================================== -->
 <!-- =============================================================================================================== -->
 <!-- =============================================================================================================== -->
